atualização de informações pessoais

--- a/index.html
+++ b/index.html
@@ -50,35 +50,23 @@
             <div id="conteudo">
 
                 <img
-                src="./assets/img/user_02.svg"
+                src="./assets/img/fotoperfil.png"
                 alt="Foto da criadora desse conteudo"
                 />
 
    
             <article id="sobre_texto">
                <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Voluptatem odio possimus, dolorem earum atque
-                itaque quas soluta placeat iure omnis porro cum
-                debitis sequi libero! Deleniti vitae quis hic
-                cumque. Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Eius inventore ullam, quia
-                deserunt enim cumque hic officia repudiandae ad ab
-                et sapiente qui vitae accusamus adipisci provident
-                sit assumenda laboriosam!
+                 Desenvolvedora Full-Stack júnior Java em formação pela Generation brasil e acadêmica de Análise e Desenvolvimento de Sistemas.<br>
+                 Me formei em Enfermagem e atualmente estou em transição de carreira para área de Desenvolvimento onde poderei aplicar meu 
+                 conhecimento técnico adquirido na resolução de problemas e desenvolvimento de inovações.<br>
+                 Estar em transição de carreira para a área de tecnologia está relacionada com a minha curiosidade de aprender e estar em 
+                 constante evolução. Minhas principais soft skills são comunicação, trabalho em equipe, resolução de problemas em ambientes 
+                 de alta pressão e proatividade.<br>
+                 Estou preparada para contribuir em projetos desafiadores e busco oportunidades para crescer profissional e tecnicamente.
+
                </p>
 
-               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Voluptatem odio possimus, dolorem earum atque
-                itaque quas soluta placeat iure omnis porro cum
-                debitis sequi libero! Deleniti vitae quis hic
-                cumque. Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Eius inventore ullam, quia
-                deserunt enim cumque hic officia repudiandae ad ab
-                et sapiente qui vitae accusamus adipisci provident
-                sit assumenda laboriosam!
-               </p>
             </article>
         </div>
         </section>
@@ -89,14 +77,13 @@
             <h2>Meu vídeo favorito:</h2>
 			
 				<div class="youtube">
-					<iframe
-						width="560"
-						height="315"
-						src="https://www.youtube.com/embed/Z3_mtwMMuGI?si=F1QiiDYSfsPG3nF0"
-						frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen
-					></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/Bl1FOKpFY2Q?si=dS1w3Gnu1dsqlQnd" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen> 
+                </iframe>
 				</div>
 
         </section>
